<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Z5_Params" Id="{e862af1e-d633-0013-2a00-093c4d3974a5}">
    <Declaration><![CDATA[TYPE ST_Z5_Params :
STRUCT
	tMoving		:	TIME	:= T#6S;	// durata della fase di trasporto
	tStopDelay	:	TIME	:= T#1S;	// permanenza nello stato Stop
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>