<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Z5_Status" Id="{b104229e-fdf7-0d73-308c-6970bf00c73a}">
    <Declaration><![CDATA[TYPE ST_Z5_Status :
STRUCT
	eStep		:	E_Z5_Step;		// passo della macchina a stati per Z5
	strStep		:	STRING;			// passo come stringa
	tStepTime	:	TIME;			// tempo di permanenza nello stato
	eErrorStep	:	E_Z5_Step;		// stato in cui si è generato l'errore
	nErrorId	:	UDINT;			// id errore
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>